chg: cleanup logic